deleted one file

--- a/xAutoML_2022_Algorithm_Selection_Marei_Freitag.ipynb
+++ b/xAutoML_2022_Algorithm_Selection_Marei_Freitag.ipynb
@@ -1,33 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [
-        "2xC69OxQglMr",
-        "CWWfYlDuGGqW",
-        "j30akmBaS__E",
-        "zmTdZuH4dsNc",
-        "r6JfBLw5XFYW",
-        "d-gVlyxVcd__"
-      ],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Marei33/xAutoML/blob/main/xAutoML_2022_Algorithm_Selection_Marei_Freitag.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -45,15 +22,18 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Session objectives\n"
-      ],
       "metadata": {
         "id": "2xC69OxQglMr"
-      }
+      },
+      "source": [
+        "# Session objectives\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "GSW0LaqNg09z"
+      },
       "source": [
         "\n",
         "\n",
@@ -61,10 +41,7 @@
         "*   Practicing algorithm selection techniques.\n",
         "*   Implementing various methods for the algorithm selection problem.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "GSW0LaqNg09z"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -77,6 +54,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -84,16 +62,10 @@
         "id": "sERVEuRJS2ie",
         "outputId": "01e67402-5df2-4c40-bb68-54a878969304"
       },
-      "source": [
-        "# To import arff files, we install liac-arff  \n",
-        "# Run this cell and restart runtime. \n",
-        "!pip install liac-arff "
-      ],
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting liac-arff\n",
@@ -107,13 +79,20 @@
             "Successfully installed liac-arff-2.5.0\n"
           ]
         }
+      ],
+      "source": [
+        "# To import arff files, we install liac-arff  \n",
+        "# Run this cell and restart runtime. \n",
+        "!pip install liac-arff "
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "-f6dwATdxryW"
       },
+      "outputs": [],
       "source": [
         "import pandas as pd \n",
         "import numpy as np\n",
@@ -134,9 +113,7 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
         "%matplotlib inline"
-      ],
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -149,6 +126,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "AwBy_-yakCiE"
+      },
       "source": [
         "1. Calculate the single best and virtual best average [2 points]\n",
         "2. Implement a regression medel per algorithm. [2 points]\n",
@@ -156,10 +136,7 @@
         "4. Implement hyprid regression model to compair each algorithm pairs.(optional) [1 points]\n",
         "\n",
         "**P.S: for some of the above tasks, you may need to add more cells. please add all extra cells at the end of the notebook.**"
-      ],
-      "metadata": {
-        "id": "AwBy_-yakCiE"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -173,17 +150,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "Q2SU_7Jodsfo"
       },
+      "outputs": [],
       "source": [
         "algos = []  # track individual algorithm performances\n",
         "insts = []  # track individual instance performances\n",
         "virtual_best=[]\n",
         "single_best=[]"
-      ],
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -224,21 +201,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "id": "jWAHHYWadM5t"
       },
+      "outputs": [],
       "source": [
         "cutoff=4\n",
         "par=2"
-      ],
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "id": "LI_ZEfUvc_BY"
       },
+      "outputs": [],
       "source": [
         "# columns name: task, repetetion, algorithm, runtime, runstatus\n",
         "data = [['a', 1., 'A', 1., 'ok'],\n",
@@ -258,61 +237,59 @@
         "\n",
         "        ['f', 1., 'A', 5., 'timeout'],  # even though a 5 is recorded as runtime value, the penalized value\n",
         "        ['f', 1., 'B', 3., 'ok']]       # will be 4*2 instead of 5*2\n"
-      ],
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# write your code here\n",
-        "virtual_best = "
-      ],
-      "metadata": {
-        "id": "PmH5OnKino80",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 149
-        },
-        "outputId": "947b16e5-1d16-4c2b-af64-2b8176425ecd"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-f1ec9592c76b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    virtual_best =\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "A = (1+2+3+1+1+cutoff*par)/6 \n",
-        "B = (3+1+1+3+cutoff*par+3)/6"
-      ],
+      "execution_count": 6,
       "metadata": {
-        "id": "uQfyMSKunoND"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 149
+        },
+        "id": "PmH5OnKino80",
+        "outputId": "947b16e5-1d16-4c2b-af64-2b8176425ecd"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-f1ec9592c76b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    virtual_best =\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
+      "source": [
+        "# write your code here\n",
+        "virtual_best = "
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uQfyMSKunoND"
+      },
+      "outputs": [],
+      "source": [
+        "A = (1+2+3+1+1+cutoff*par)/6 \n",
+        "B = (3+1+1+3+cutoff*par+3)/6"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "htdqN95Ec-_N"
       },
+      "outputs": [],
       "source": [
         "# write your code here\n",
         "single_best= \n",
         "print(\"Single best is: \", single_best)\n",
         "print(\"Virtual best is: \", virtual_best)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -325,114 +302,114 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "U_9qOUbgE_3U"
       },
+      "outputs": [],
       "source": [
         "# Import algorithm_runs file\n",
         "# download file from this URL: https://drive.google.com/file/d/194SLYwJS1_txFSmZbu6T_LPn1h1f1ssU/view?usp=sharing\n",
         "# and upload it to current directory\n",
         "arff_file = arff.load(open('./algorithm_runs.arff'))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "7oEGnzf0Fpst"
       },
+      "outputs": [],
       "source": [
         "# converting an arff file to a dataframe to make it easier to edit\n",
         "algorithm_runs_df= pd.DataFrame(arff_file['data'])"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "2U7tFnp2WgLT"
       },
+      "outputs": [],
       "source": [
         "# There is no title for the columns!\n",
         "algorithm_runs_df"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "NXLxfd9CIw6w"
       },
+      "outputs": [],
       "source": [
         "# Add name of columns to dataframe.\n",
         "algorithm_runs_df.columns=[\"instance_id\",\"repetition\",\"algorithm\", \"runtime\", \"runstatus\"]"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "xKnywTH7Iygv"
       },
+      "outputs": [],
       "source": [
         "# Check the 5 frist record of the dataframe.\n",
         "algorithm_runs_df.head(5)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "rgZ9WEy1jdk6"
       },
+      "outputs": [],
       "source": [
         "algorithms = algorithm_runs_df.algorithm.unique()\n",
         "algorithms"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "k6HoHXvUj4si"
       },
+      "outputs": [],
       "source": [
         "algorithm_runs_df.instance_id.unique().shape[0]"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "tC3vH1aCG4mF"
       },
+      "outputs": [],
       "source": [
         "# A brief description of the dataframe.\n",
         "algorithm_runs_df.info()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "kGCstTVAa2M5"
       },
+      "outputs": [],
       "source": [
         "algos = []  # track individual algorithm performances\n",
         "insts = []  # track individual instance performances\n",
         "virtual_best=[]\n",
         "single_best=[]"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -445,27 +422,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "khQ3vj5rIy_O"
       },
+      "outputs": [],
       "source": [
         "cutoff=5000\n",
         "par=10"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "a8OGrbL3fd5Y"
       },
+      "outputs": [],
       "source": [
         "# Apply PAR10 to the dataframe\n",
         "algorithm_runs_df[\"runtime\"]=np.where((algorithm_runs_df.runtime>=cutoff),cutoff*par,algorithm_runs_df.runtime)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -487,30 +464,30 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "3jZeNw-FLDoJ"
       },
+      "outputs": [],
       "source": [
         "#Your code start here\n",
         "# \n",
         "#Your code end here"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "d4c1a4n4V2Pe"
       },
+      "outputs": [],
       "source": [
         "#Your code start here\n",
         "# \n",
         "#Your code end here\n",
         "print(\"virtual best is\",virtual_best)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -524,40 +501,40 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "dT4MFX31eh9T"
       },
+      "outputs": [],
       "source": [
         "algorithm_runs_df"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ZvPEzaPTwRpv"
       },
+      "outputs": [],
       "source": [
         "single_best_df=pd.DataFrame(columns=('Algo', 'min_run'))\n",
         "# Your code start here\n",
         "# calculate the average running time for each algorithm alg\n",
         "\n",
         "# Your code start here"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "f6JNIFITxD5e"
       },
+      "outputs": [],
       "source": [
         "single_best_df.min_run.min()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -572,9 +549,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "8YdXUPLCZ2_N"
       },
+      "outputs": [],
       "source": [
         "# Reading meta-features of the instances\n",
         "arff_file = arff.load(open('./feature_values.arff'))\n",
@@ -584,15 +563,15 @@
         "    cols.append('feat_%d' % i)\n",
         "features_df.columns = cols\n",
         "features_df"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "But5Zmu4Far2"
       },
+      "outputs": [],
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "\n",
@@ -604,9 +583,7 @@
         "\n",
         "per_algo_df['selected'] = per_algo_df.min(axis=1)\n",
         "per_algo_df"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -620,9 +597,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "W89bIFy2yntv"
       },
+      "outputs": [],
       "source": [
         "from sklearn import linear_model\n",
         "from sklearn.model_selection import KFold\n",
@@ -630,9 +609,7 @@
         "# Your code start here\n",
         "# \n",
         "# Your code end here"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -645,16 +622,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "IMD86Jn7un3E"
       },
+      "outputs": [],
       "source": [
         "# Your code start here\n",
         "# \n",
         "# Your code end here"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -670,16 +647,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "D46Lv-Qyuut-"
       },
+      "outputs": [],
       "source": [
         "# Your code start here\n",
         "# \n",
         "# Your code end here"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -711,5 +688,35 @@
         "\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [
+        "2xC69OxQglMr",
+        "CWWfYlDuGGqW",
+        "j30akmBaS__E",
+        "zmTdZuH4dsNc",
+        "r6JfBLw5XFYW",
+        "d-gVlyxVcd__"
+      ],
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.7",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.7"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "542ba6efdf15187d355a36785e4550c5a6b684d183d64162d4a1ad1961860078"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
