--- a/xAutoML_2022_Algorithm_Selection_Marei_Freitag.ipynb
+++ b/xAutoML_2022_Algorithm_Selection_Marei_Freitag.ipynb
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 667,
+      "execution_count": 85,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 668,
+      "execution_count": 86,
       "metadata": {
         "id": "-f6dwATdxryW"
       },
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 669,
+      "execution_count": 87,
       "metadata": {
         "id": "Q2SU_7Jodsfo"
       },
@@ -195,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 670,
+      "execution_count": 88,
       "metadata": {
         "id": "jWAHHYWadM5t"
       },
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 671,
+      "execution_count": 89,
       "metadata": {
         "id": "LI_ZEfUvc_BY"
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 672,
+      "execution_count": 90,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -251,7 +251,7 @@
               "1.3333333333333333"
             ]
           },
-          "execution_count": 672,
+          "execution_count": 90,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 673,
+      "execution_count": 91,
       "metadata": {
         "id": "uQfyMSKunoND"
       },
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 674,
+      "execution_count": 92,
       "metadata": {},
       "outputs": [
         {
@@ -293,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 675,
+      "execution_count": 93,
       "metadata": {
         "id": "htdqN95Ec-_N"
       },
@@ -325,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 676,
+      "execution_count": 94,
       "metadata": {
         "id": "U_9qOUbgE_3U"
       },
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 677,
+      "execution_count": 95,
       "metadata": {
         "id": "7oEGnzf0Fpst"
       },
@@ -351,7 +351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 678,
+      "execution_count": 96,
       "metadata": {
         "id": "2U7tFnp2WgLT"
       },
@@ -508,7 +508,7 @@
               "[5400 rows x 5 columns]"
             ]
           },
-          "execution_count": 678,
+          "execution_count": 96,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -520,7 +520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 679,
+      "execution_count": 97,
       "metadata": {
         "id": "NXLxfd9CIw6w"
       },
@@ -532,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 680,
+      "execution_count": 98,
       "metadata": {
         "id": "xKnywTH7Iygv"
       },
@@ -626,7 +626,7 @@
               "4        minisathackreferenceminisat_2.2.0   48.1037        ok  "
             ]
           },
-          "execution_count": 680,
+          "execution_count": 98,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -638,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 681,
+      "execution_count": 99,
       "metadata": {
         "id": "rgZ9WEy1jdk6"
       },
@@ -661,7 +661,7 @@
               "      dtype=object)"
             ]
           },
-          "execution_count": 681,
+          "execution_count": 99,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -673,7 +673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 682,
+      "execution_count": 100,
       "metadata": {
         "id": "k6HoHXvUj4si"
       },
@@ -684,7 +684,7 @@
               "300"
             ]
           },
-          "execution_count": 682,
+          "execution_count": 100,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -695,7 +695,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 683,
+      "execution_count": 101,
       "metadata": {
         "id": "tC3vH1aCG4mF"
       },
@@ -726,7 +726,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 684,
+      "execution_count": 102,
       "metadata": {
         "id": "kGCstTVAa2M5"
       },
@@ -749,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 685,
+      "execution_count": 103,
       "metadata": {
         "id": "khQ3vj5rIy_O"
       },
@@ -761,7 +761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 686,
+      "execution_count": 104,
       "metadata": {
         "id": "a8OGrbL3fd5Y"
       },
@@ -791,7 +791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 687,
+      "execution_count": 105,
       "metadata": {
         "id": "3jZeNw-FLDoJ"
       },
@@ -806,6 +806,7 @@
       ],
       "source": [
         "#Your code start here\n",
+        "# take for every instance the algorithm with the minimal runtime\n",
         "virtual_df = algorithm_runs_df.groupby('instance_id').agg({\"runtime\": ['min']})\n",
         "virtual_df.columns = [\"runtime_min\"]\n",
         "virtual_best = virtual_df.runtime_min.mean()\n",
@@ -825,7 +826,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 688,
+      "execution_count": 106,
       "metadata": {
         "id": "dT4MFX31eh9T"
       },
@@ -982,7 +983,7 @@
               "[5400 rows x 5 columns]"
             ]
           },
-          "execution_count": 688,
+          "execution_count": 106,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -993,7 +994,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 689,
+      "execution_count": 107,
       "metadata": {
         "id": "ZvPEzaPTwRpv"
       },
@@ -1126,7 +1127,7 @@
               "rcl_2011-04-01                           19660.771236"
             ]
           },
-          "execution_count": 689,
+          "execution_count": 107,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1141,7 +1142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 690,
+      "execution_count": 108,
       "metadata": {
         "id": "f6JNIFITxD5e"
       },
@@ -1152,18 +1153,19 @@
               "14605.904255913334"
             ]
           },
-          "execution_count": 690,
+          "execution_count": 108,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "single_best_df.runtime.min()"
+        "single_best = single_best_df.runtime.min()\n",
+        "single_best # the algorithm with the overall instances minimal average runtime"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 691,
+      "execution_count": 109,
       "metadata": {},
       "outputs": [
         {
@@ -1172,7 +1174,7 @@
               "14605.904255913325"
             ]
           },
-          "execution_count": 691,
+          "execution_count": 109,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1201,7 +1203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 692,
+      "execution_count": 110,
       "metadata": {
         "id": "8YdXUPLCZ2_N"
       },
@@ -1576,7 +1578,7 @@
               "[300 rows x 117 columns]"
             ]
           },
-          "execution_count": 692,
+          "execution_count": 110,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1594,7 +1596,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 693,
+      "execution_count": 111,
       "metadata": {
         "id": "But5Zmu4Far2"
       },
@@ -1655,7 +1657,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 694,
+      "execution_count": 112,
       "metadata": {},
       "outputs": [
         {
@@ -1679,13 +1681,13 @@
       "source": [
         "# Finally, choose for each sample in the test set the algorithm with the shortest runtime\n",
         "pred_alg = pred_runtimes.idxmin(axis=1)\n",
-        "pred_alg_saved = pred_alg.copy()\n",
-        "pred_runtimes_saved = pred_runtimes.copy()\n",
+        "pred_alg_saved = pred_alg.copy() # save results for later\n",
+        "pred_runtimes_saved = pred_runtimes.copy() # save results for later\n",
         "print(pred_alg.describe())\n",
         "\n",
         "# compare with true values\n",
         "true_alg = true_runtimes.idxmin(axis=1)\n",
-        "true_runtimes_saved = true_runtimes.copy()\n",
+        "true_runtimes_saved = true_runtimes.copy() # save results for later\n",
         "print(true_alg.describe())\n",
         "\n",
         "# convert categorical output to numerical values\n",
@@ -1713,7 +1715,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 695,
+      "execution_count": 113,
       "metadata": {
         "id": "W89bIFy2yntv"
       },
@@ -1722,12 +1724,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "F1 Score: 0.107.\n",
-            "F1 Score: 0.0605.\n",
-            "F1 Score: 0.113.\n",
-            "F1 Score: 0.0889.\n",
-            "F1 Score: 0.0795.\n",
-            "Average F1-Score: 0.08976887382769735\n"
+            "F1 Score: 0.1444.\n",
+            "F1 Score: 0.0945.\n",
+            "F1 Score: 0.0906.\n",
+            "F1 Score: 0.0991.\n",
+            "F1 Score: 0.1135.\n",
+            "Average F1-Score: 0.10841265164717177\n"
           ]
         }
       ],
@@ -1822,7 +1824,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 696,
+      "execution_count": 114,
       "metadata": {
         "id": "IMD86Jn7un3E"
       },
@@ -1831,17 +1833,27 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Average predicted runtime -67849.63471628193\n",
-            "Average true runtime 8679.501968066666\n"
+            "Average true runtime for predicted algorithms: 13733.171436400004\n",
+            "Virtual best is 8187.517818206667\n",
+            "Single best is 14605.904255913334\n"
           ]
         }
       ],
       "source": [
         "# Your code start here\n",
-        "# runtimes for the test set\n",
-        "print(f\"Average predicted runtime {pred_runtimes_saved.min(axis=1).mean()}\")\n",
-        "print(f\"Average true runtime {true_runtimes_saved.min(axis=1).mean()}\")\n",
+        "# only take runtimes of the test set into account, because the other predictions are \"trained to be precise\"\n",
         "\n",
+        "# save true runtimes of the predicted algorithms \n",
+        "\n",
+        "pred_alg_runtime = []\n",
+        "for i in range(len(pred_alg_saved)):\n",
+        "    true_runtime = true_runtimes_saved.loc[i, pred_alg_saved[i]]\n",
+        "    pred_alg_runtime.append(true_runtime)\n",
+        "\n",
+        "# calculate average true runtime of the predicted algorithms\n",
+        "print(f\"Average true runtime for predicted algorithms: {np.array(pred_alg_runtime).mean()}\")\n",
+        "print(f\"Virtual best is {virtual_best}\")\n",
+        "print(f\"Single best is {single_best}\")\n",
         "\n",
         "# Your code end here"
       ]
@@ -1860,7 +1872,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 697,
+      "execution_count": 115,
       "metadata": {
         "id": "D46Lv-Qyuut-"
       },
